<resources>
    <string name="app_name">WatchIt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Shows">Shows</string>
    <string name="Movies">Movies</string>
    <string name="Collection">Collection</string>
    <string name="Logout">Logout</string>
    <string name="settings">Settings</string>

    <string name="checkin">Checkin</string>
    <string name="watched">Watched</string>
    <string name="unwatched">Unwatched</string>
    <string name="uncheckin">Uncheckin</string>
    <string name="remove">Remove</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="added_to_watchlist">added to watchlist</string>
    <string name="watch_next">Watch next:</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="search_query_title">"Search: "</string>
    <string name="avatar">avatar</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dark_theme">Dark theme</string>
    <string name="modif_apply_next_time">Modifications will be apply next time</string>
    <string name="select_image">Select image</string>
    <string name="take_picture">Take picture</string>
    <string name="cannot_find_crop_app">Cannot find any crop image app</string>
    <string name="title_activity_discover">DiscoverActivity</string>
    <string name="title_activity_movie">MovieActivity</string>
</resources>
