<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/group1">
        <item
            android:id="@+id/nav_shows"
            android:icon="@drawable/ic_tv_24dp"
            android:title="@string/Shows" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_local_movies_24dp"
            android:title="@string/Movies" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_style_24dp"
            android:title="@string/Collection" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group2">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_settings_power_24dp"
                android:title="@string/Logout" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/settings" />
    </group>
</menu>

